Flesh out project service